[package]
name = "rust-acss"
version = "0.1.0"
authors = ["Ann Lee<acscoder@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
